force-app/main/default/objects/Apttus_Billing__InvoiceFeeType__c/Apttus_Billing__InvoiceFeeType__c.object-meta.xml
<CustomObject>
    <description>Master set of charges that can be associated with various accounts  in the CPQ ecosystem.</description>
    <label>Invoice Fee Type</label>
    <nameField>
        <label>Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Fee Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>