force-app/main/default/objects/Apttus_Billing__InvoiceFeeType__c/fields/Apttus_Billing__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>