force-app/main/default/objects/Apttus_Billing__InvoiceFeeType__c/fields/Apttus_Billing__FeeAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__FeeAmount__c</fullName>
    <description>The fee amount whose meaning is defined by the fee type.</description>
    <inlineHelpText>The fee amount whose meaning is defined by the fee type.</inlineHelpText>
    <label>Fee Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>