force-app/main/default/objects/Apttus_Billing__InvoiceFeeType__c/fields/Apttus_Billing__FeeType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__FeeType__c</fullName>
    <description>Defines the type of fee amount.</description>
    <inlineHelpText>Defines the type of fee amount.</inlineHelpText>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absolute</fullName>
                <default>true</default>
                <label>Absolute</label>
            </value>
            <value>
                <fullName>Dynamic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>