force-app/main/default/objects/Apttus_Billing__InvoiceFeeType__c/fields/Apttus_Billing__IsActive__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether this attribute record is active.</description>
    <inlineHelpText>Determines whether this attribute record is active.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>